# SAADT

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
scripts/: README.md  _model.py  check_secartifacts_artifacts.py  download.py  parse_paper_headers.py  rank_links.py  scrape_conference.py  scrape_pdfs.py  secartifacts_compare.py  secartifacts_results.py  validate_links.py
src/saadt/links/: util.py
src/saadt/links/matching/: crawlers.py  git.py  matcher.py  rules.py  util.py
src/saadt/links/parsing/: __init__.py  base.py  parser.py
src/saadt/links/ranking/: __init__.py  base.py  phase.py  ranker.py
src/saadt/links/ranking/rules/: __init__.py  base.py  location.py  request.py  session.py  url.py
src/saadt/links/validation/: constraints.py  eventdispatcher.py  events.py  listeners.py  validator.py
src/saadt/model/: __init__.py  badge.py  conference.py  paper.py
src/saadt/pdf/: __init__.py  document.py  page.py
src/saadt/pdf/parser/: __init__.py  _coordinate.py
src/saadt/scraper/: __init__.py  acsac.py  ches.py  ndss.py  usenix.py  util.py  woot.py
src/saadt/util/: __init__.py  cache.py  exceptions.py  log.py  mputils.py  patterns.py  secartifacts.py  session.py  text_encoding.py
stubs/bibtexparser/: __init__.pyi  entrypoint.pyi  exceptions.pyi  library.pyi  model.pyi  splitter.pyi  writer.pyi
stubs/bibtexparser/middlewares/: __init__.pyi  enclosing.pyi  interpolate.pyi  latex_encoding.pyi  middleware.pyi  month.pyi  names.pyi  parsestack.pyi  sorting_blocks.pyi  sorting_entry_fields.pyi
